// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary Component 1`] = `
<div>
  <h2>
     Viewing 
    3
     
    expenses
     totaling: 
    $1,484.07
     
  </h2>
</div>
`;

exports[`should render ExpensesSummary Component with single expense 1`] = `
<div>
  <h2>
     Viewing 
    1
     
    expense
     totaling: 
    $12.34
     
  </h2>
</div>
`;
